<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Isegoria</string>
    <string name="isegoria_logo_content_description">Isegoria Logo</string>
    <string name="navigation_feed">Feed</string>
    <string name="navigation_election">Election</string>
    <string name="navigation_poll">Polls</string>
    <string name="navigation_vote">Vote</string>
    <string name="navigation_profile">Profile</string>
    <string name="section_title_feed">Feed</string>
    <string name="section_title_election">Election</string>
    <string name="section_title_poll">Current Polls</string>
    <string name="section_title_vote">Vote</string>
    <string name="section_title_friends">Friends</string>
    <string name="section_title_profile">Profile</string>
    <string name="section_title_candidate_profile">Candidate Profile</string>
    <string name="user_login_email_hint">Email</string>
    <string name="user_login_password_hint">Password</string>
    <string name="user_login_password_error_required">A password is required</string>
    <string name="user_login_email_error_required">An email address is required</string>
    <string name="user_login_button">Login</string>
    <string name="user_sign_up_button">Sign Up</string>
    <string name="login_small_print">By continuing you agree to our Terms and Privacy Policy</string>
    <string name="forgot_password_title">Forgot Password</string>
    <string name="forgot_password_message">Please provide your email address to receive a password reset link.</string>
    <string name="forgot_password_input_hint">email@address.com</string>
    <string name="forgot_password_email_sent">If a matching account was found, an email was sent to %s to allow you to reset your password.</string>
    <string name="user_sign_up_title">Sign Up</string>
    <string name="user_login_error_message">Couldn\'t login. Check your email and password, and make sure you have an internet connection.</string>
    <string name="connection_error_message">No connection</string>
    <string name="connection_error_action">Retry</string>
    <string name="user_sign_up_first_name_hint">Given Name</string>
    <string name="user_sign_up_last_name_hint">Family Name</string>
    <string name="user_sign_up_university_email_hint">Email Address</string>
    <string name="user_sign_up_first_password_hint">New Password</string>
    <string name="user_sign_up_confirm_password_hint">Confirm Password</string>
    <string name="user_sign_up_gender_hint">Gender</string>
    <string name="user_sign_up_choose_country_hint">Country</string>
    <string name="user_sign_up_choose_institution_hint">Institution</string>
    <string name="user_sign_up_next_button">Next</string>
    <string name="user_sign_up_error_title">Sign Up Failed</string>
    <string name="user_sign_up_error_message">Make sure you\'ve entered your details correctly, and you have an active internet connection.</string>
    <string name="user_consent_statement_message">PLAIN LANGUAGE STATEMENT\n\nPlease read the following statement carefully.\n\nThe project is being conducted by researchers in CIS at the University of Melbourne to observe how personality traits and social networks influence interaction with online information during political campaigns.\n\n Should you participate, you will be asked to fill in demographic information and use the app on your phone for 5 weeks. Participation in this research is voluntary and confidential. However, this confidentiality is subject to legal limitations. Research papers resulting from the project will only have aggregate data and will be made public. Upon being published the option to withdraw consent will expire. Results are available on request by email: woodma@student.unimelb.edu.au.\n\n The App collects the information you enter, along with your commitment to vote and your connections in the social network. Obvious identifiers (such as your name) will be removed. It may still be possible to identify you, but researchers will not seek to do so. Therefore your participation will not affect any ongoing assessment if you are in a dependent relationship with any of the researchers (e.g., being taught by a researcher).\n\n Data will be collected and stored at the university, in accordance with University policy, and disposed 5 years after final publication. It will not be shared with others except in aggregate form in a published research paper.\n\n This project has been approved by the University of Melbourne\'s Human Research Ethics Committee (HREC Reference 1441638). If participants have any concerns about the conduct of this research project they can contact the Executive Officer, Human Research Ethics, The University of Melbourne, ph: 03 8344 2073; fax: 03 9347 6739; email: HumanEthics-Enquiries@unimelb.edu.au\n\n If you have any further questions about the research itself, please contact the researchers: Miguel Wood (woodma@student.unimelb.edu.au), A/Prof. Vanessa Teague (vjteague@unimelb.edu.au or 03 8344 1274), and A/Prof Simon Milton (smilton@unimelb.edu.au).\n\nBy using this app I consent to participate in the research.</string>
    <string name="user_consent_melbourne_image_content_description">University of Melbourne coat of arms</string>
    <string name="user_consent_disagree_button">Disagree</string>
    <string name="user_consent_agree_button">Agree</string>
    <string name="email_verification_description">Please check your Inbox for a verification email so we can get your account up and running. If you haven\'t received it, please tap resend.</string>
    <string name="email_verification_success_button">Verified, Please Log Me In</string>
    <string name="email_verification_resend_button">Resend Verification Email</string>
    <string name="email_verification_resend_toast_message">Verification message resent</string>
    <string name="email_verification_login_error_message">Couldn\'t Login. Please verify email.</string>
    <string name="agree" >Agree &gt;&gt;</string>
    <string name="disagree" >&lt;&lt; Disagree</string>
    <string name="personality_screen_1_message">Isegoria is an academic project and we would love to collect a little bit of data based around our users. For science!\n\nAll you need to do is answer a few questions about yourself and your personality - nothing longer than 3 minutes. Plus, you\'ll even unlock a limited edition badge for completing it! as always, your information is kept completely anonymous.</string>
    <string name="personality_screen_1_begin_questions">Take Personality Questions</string>
    <string name="personality_questions_done_button">Complete and Finish</string>
    <string name="personality_screen_2_description">Simply select a number next to each statement to indicate the extent to which you agree or disagree. You should rate the extend to which the pair of traits applies to you, even if one characteristic applies more strongly than the other.</string>
    <string name="personality_slider_disagree_strongly">Disagree Strongly</string>
    <string name="personality_slider_disagree_moderately">Disagree Moderately</string>
    <string name="personality_slider_disagree_a_little">Disagree a Little</string>
    <string name="personality_slider_neither">Neither</string>
    <string name="personality_slider_agree_a_little">Agree a Little</string>
    <string name="personality_slider_agree_moderately">Agree Moderately</string>
    <string name="personality_slider_agree_strongly">Agree Strongly</string>
    <string name="election_section_title_overview">Overview</string>
    <string name="election_section_title_candidates">Candidates</string>
    <string name="election_overview_subheading">OVERVIEW</string>
    <string name="election_overview_process_subheading">ELECTION PROCESS</string>
    <string name="election_efficacy_survey_message">Welcome to your election centre.\nLearn about your political efficacy by completing this survey.</string>
    <string name="election_efficacy_survey_start_button">Start Survey</string>
    <string name="election_candidate_profile_description_label">DESCRIPTION</string>
    <string name="election_candidate_profile_add_friend">Add candidate as friend</string>
    <string name="election_candidate_profile_remove_friend">Remove candidate as friend</string>
    <string name="election_candidate_profile_friend_request_sent">Friend request sent to candidate</string>
    <string name="election_candidate_profile_friend_request_revoked">Friend request to candidate revoked</string>
    <string name="election_candidate_profile_friend_removed">Candidate removed as friend</string>
    <string name="vote_location_hint">I will be voting in the next community election at</string>
    <string name="vote_date_time_hint">And I\'ll set a reminder for my vote at the time of</string>
    <string name="vote_next_button">Next</string>
    <string name="vote_sign_pledge_message">Make it official and sign on the line above to finish your democratic pledge.</string>
    <string name="vote_sign_pledge_next_button">Next</string>
    <string name="vote_done_add_to_calendar">Add to Calendar</string>
    <string name="vote_done_heading">Done and done.</string>
    <string name="vote_done_message">You\'re ready to go!\n\nMake sure you check with the university before then to find out where polling booths are positioned, and make sure you scan your QR code at the polling booth to receive your exclusive voting badge!</string>
    <string name="event_add_to_calendar">Add to Calendar</string>
    <string name="vote_tab_1">Vote</string>
    <string name="vote_tab_2">Pledge</string>
    <string name="vote_tab_3">Done</string>
    <string name="not_at_all">&lt;&lt; Not at all</string>
    <string name="completely">Completely &gt;&gt;</string>
    <string name="section_title_self_efficacy_questions">Self-Efficacy Questions</string>
    <string name="self_efficacy_done_button">Done</string>
    <string name="self_efficacy_questions_message">The PPSE-S is composed of 4 items aimed to assess individuals’ beliefs in their capabilities to engage actively in politics. The 4 items are measured on a 5 point Likert scale, from 1 (not at all) to 5 (completely).</string>
    <string name="self_efficacy_statement_1">Promote public initiatives to support political programs that you believe are just</string>
    <string name="self_efficacy_statement_2">Maintain personal relationships with representatives of national government authorities</string>
    <string name="settings_back_button_content_description">Back to Profile</string>
    <string name="about_version">Version 1.0 \"Tesla\" Beta</string>
    <string name="about_directed_by">Directed By</string>
    <string name="about_director_name">Miguel Wood</string>
    <string name="about_android_heading">Android Client</string>
    <string name="about_android_person">Anthony Quattrone</string>
    <string name="about_behavioral">Behavioral Team</string>
    <string name="about_thanks">Special Thanks To</string>
    <string name="about_thanks_people">The Euler\'s Bridge Advisory Network Members</string>
    <string name="about_behavioral_name_1">James Kotsias</string>
    <string name="about_behavioral_name_2">Drew Smith</string>
    <string name="about_behavioral_name_3">Greg Newitt</string>
    <string name="about_behavioral_name_4">Miguel Wood</string>
    <string name="about_behavioral_name_5">Charlie Eastaugh</string>
    <string name="about_design_team_heading">Design Team</string>
    <string name="about_designer_name_1">Drew Smith</string>
    <string name="about_coding_team_heading">Coding Team</string>
    <string name="about_coding_team_name_1">Alan Gao</string>
    <string name="about_coding_team_name_2">David Rivera</string>
    <string name="about_coding_team_name_3">Greg Newitt</string>
    <string name="about_coding_team_name_4">Anthony Quattrone</string>
    <string name="about_coding_team_name_5">Yikai Gong</string>
</resources>