<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- Contents of the main navigation drawer/menu -->

    <group
        android:checkableBehavior="single">
        <item
            android:id="@+id/navigation_feed"
            android:title="@string/navigation_feed"
            android:icon="@drawable/feed" />

        <item
            android:id="@+id/navigation_election"
            android:title="@string/navigation_election"
            android:icon="@drawable/electionblue" />

        <item
            android:id="@+id/navigation_poll"
            android:title="@string/navigation_poll"
            android:icon="@drawable/poll" />

        <item
            android:id="@+id/navigation_vote"
            android:title="@string/navigation_vote"
            android:icon="@drawable/election"/>

        <item
            android:id="@+id/navigation_profile"
            android:title="@string/navigation_profile"
            android:icon="@drawable/profile"/>

        <item
            android:id="@+id/navigation_settings"
            android:title="@string/navigation_settings"
            android:icon="@drawable/settings" />
    </group>

</menu>