<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_vertical"
    android:id="@+id/loginContainer"
    android:paddingStart="@dimen/activity_horizontal_margin"
    android:paddingEnd="@dimen/activity_horizontal_margin"
    android:paddingHorizontal="@dimen/activity_horizontal_margin"
    android:theme="@style/LoginSignUpTheme"
    android:background="@color/black"
    android:fitsSystemWindows="false">

	<ImageView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_gravity="center_horizontal"
		android:src="@drawable/isegoria"
		android:contentDescription="@string/isegoria_logo_content_description" />

	<TextView
		android:id="@+id/isegoria_label"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="8dp"
		android:layout_gravity="center_horizontal"
		android:gravity="center"
		android:text="@string/app_name"
		android:textAppearance="@style/LoginHeadingTextAppearance"  />

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:hint="@string/user_login_email_hint">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/login_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:autofillHints="emailAddress"
            android:textColor="@color/white"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/user_login_password_hint"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/white">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/login_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textWebPassword"
            android:autofillHints="password"
            android:textColor="@color/white" />
    </android.support.design.widget.TextInputLayout>

	<Button
		android:id="@+id/login_button"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginTop="16dp"
		android:text="@string/user_login_button"
		android:theme="@style/LoginButton" />

	<Button
		android:id="@+id/login_signup_button"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginTop="16dp"
		android:text="@string/user_sign_up_button"
		android:theme="@style/SignUpButton" />

	<TextView
        android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_gravity="center"
		android:layout_marginTop="32dp"
		android:gravity="center"
		android:text="@string/login_small_print"
		style="@style/LoginSignUpSmallPrintText" />

</LinearLayout>