<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:orientation="vertical"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="32dp">

        <ImageView
            android:id="@+id/backButton"
            android:contentDescription="@string/settings_back_button_content_description"
            android:layout_width="24dp"
            android:layout_height="24dp"
            app:srcCompat="@drawable/ic_arrow_back_white_24dp"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginStart="@dimen/activity_horizontal_margin" />

        <ImageView
            android:layout_width="128dp"
            android:layout_height="128dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="-24dp"
            android:src="@drawable/welcome"
            android:contentDescription="@string/isegoria_logo_content_description"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/white"
            android:layout_marginTop="16dp"
            android:textSize="34sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/about_version"
            android:textAlignment="center"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/white"
            android:paddingTop="12dp"
            android:textSize="14sp" />

        <LinearLayout
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/about_directed_by"
                android:layout_gravity="center_vertical"
                android:textSize="18sp"
                android:textColor="#ff4c74cc"
                android:paddingRight="8dp"
                android:paddingEnd="8dp"
                tools:ignore="RtlSymmetry" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/about_director_name"
                android:layout_gravity="center|end"
                android:textSize="18sp"
                android:textColor="#fffff0ef" />
        </LinearLayout>

        <LinearLayout
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:paddingBottom="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/about_android_heading"
                android:layout_gravity="center_vertical"
                android:textSize="18sp"
                android:textColor="#ff4c74cc"
                android:paddingRight="8dp"
                android:paddingEnd="8dp"
                tools:ignore="RtlSymmetry" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/about_android_person"
                android:layout_gravity="center|end"
                android:textSize="18sp"
                android:textColor="#fffff0ef" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center|center_vertical|center_horizontal"
            android:layout_gravity="center">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/about_behavioral"
                    android:textSize="18sp"
                    android:textColor="#ff4c74cc"
                    android:paddingLeft="@dimen/activity_horizontal_margin"
                    android:paddingStart="@dimen/activity_horizontal_margin"
                    android:layout_marginTop="16dp"
                    tools:ignore="RtlSymmetry" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/about_behavioral_name_1"
                    android:textSize="16sp"
                    android:textColor="#fffff0ef"
                    android:paddingLeft="@dimen/activity_horizontal_margin"
                    android:paddingStart="@dimen/activity_horizontal_margin"
                    android:layout_marginTop="8dp"
                    tools:ignore="RtlSymmetry" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/about_behavioral_name_2"
                    android:textSize="16sp"
                    android:textColor="#fffff0ef"
                    android:paddingLeft="@dimen/activity_horizontal_margin"
                    android:paddingStart="@dimen/activity_horizontal_margin"
                    android:layout_marginTop="8dp"
                    tools:ignore="RtlSymmetry" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/about_behavioral_name_3"
                    android:textSize="16sp"
                    android:textColor="#fffff0ef"
                    android:paddingLeft="20dp"
                    android:paddingStart="20dp"
                    android:layout_marginRight="@dimen/activity_horizontal_margin"
                    android:layout_marginEnd="@dimen/activity_horizontal_margin"
                    android:layout_marginTop="8dp"
                    tools:ignore="RtlSymmetry" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/about_behavioral_name_4"
                    android:textSize="16sp"
                    android:textColor="#fffff0ef"
                    android:paddingLeft="@dimen/activity_horizontal_margin"
                    android:paddingStart="@dimen/activity_horizontal_margin"
                    android:layout_marginTop="8dp"
                    tools:ignore="RtlSymmetry" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/about_behavioral_name_5"
                    android:textSize="16sp"
                    android:textColor="#fffff0ef"
                    android:paddingLeft="@dimen/activity_horizontal_margin"
                    android:paddingStart="@dimen/activity_horizontal_margin"
                    android:layout_marginTop="8dp"
                    tools:ignore="RtlSymmetry" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/about_design_team_heading"
                    android:textSize="18sp"
                    android:textColor="#ff4c74cc"
                    android:layout_marginTop="16dp"
                    android:paddingLeft="@dimen/activity_horizontal_margin"
                    android:paddingStart="@dimen/activity_horizontal_margin"
                    android:paddingBottom="5dp"
                    tools:ignore="RtlSymmetry" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/about_designer_name_1"
                    android:textSize="16sp"
                    android:textColor="#fffff0ef"
                    android:paddingLeft="@dimen/activity_horizontal_margin"
                    android:paddingStart="@dimen/activity_horizontal_margin"
                    android:layout_marginRight="18dp"
                    android:layout_marginEnd="18dp"
                    android:paddingBottom="5dp"
                    tools:ignore="RtlSymmetry" />
            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/about_coding_team_heading"
                    android:textSize="18sp"
                    android:textColor="#ff4c74cc"
                    android:layout_gravity="end"
                    android:paddingRight="@dimen/activity_horizontal_margin"
                    android:paddingEnd="@dimen/activity_horizontal_margin"
                    android:layout_marginTop="16dp"
                    tools:ignore="RtlSymmetry" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/about_coding_team_name_1"
                    android:textSize="16sp"
                    android:textColor="#fffff0ef"
                    android:layout_gravity="end"
                    android:layout_marginTop="8dp"
                    android:paddingRight="@dimen/activity_horizontal_margin"
                    android:paddingEnd="@dimen/activity_horizontal_margin"
                    android:paddingBottom="5dp"
                    tools:ignore="RtlSymmetry" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/about_coding_team_name_2"
                    android:textSize="16sp"
                    android:textColor="#fffff0ef"
                    android:layout_gravity="end"
                    android:paddingRight="@dimen/activity_horizontal_margin"
                    android:paddingEnd="@dimen/activity_horizontal_margin"
                    android:paddingBottom="5dp"
                    tools:ignore="RtlSymmetry" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/about_coding_team_name_3"
                    android:textSize="16sp"
                    android:textColor="#fffff0ef"
                    android:layout_gravity="end"
                    android:paddingRight="@dimen/activity_horizontal_margin"
                    android:paddingEnd="@dimen/activity_horizontal_margin"
                    android:paddingBottom="5dp"
                    tools:ignore="RtlSymmetry" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/about_coding_team_name_4"
                    android:textSize="16sp"
                    android:textColor="#fffff0ef"
                    android:layout_gravity="end"
                    android:paddingRight="@dimen/activity_horizontal_margin"
                    android:paddingEnd="@dimen/activity_horizontal_margin"
                    android:paddingBottom="5dp"
                    tools:ignore="RtlSymmetry" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/about_coding_team_name_5"
                    android:textSize="16sp"
                    android:textColor="#fffff0ef"
                    android:layout_gravity="end"
                    android:paddingRight="@dimen/activity_horizontal_margin"
                    android:paddingEnd="@dimen/activity_horizontal_margin"
                    android:paddingBottom="5dp"
                    tools:ignore="RtlSymmetry" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/about_thanks"
                    android:textSize="18sp"
                    android:textColor="#ff4c74cc"
                    android:layout_gravity="center_vertical|end"
                    android:layout_marginTop="16dp"
                    android:layout_marginRight="@dimen/activity_horizontal_margin"
                    android:layout_marginEnd="@dimen/activity_horizontal_margin"
                    android:paddingBottom="5dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/about_thanks_people"
                    android:textSize="15sp"
                    android:textColor="#fffff0ef"
                    android:paddingRight="@dimen/activity_horizontal_margin"
                    android:paddingEnd="@dimen/activity_horizontal_margin"
                    tools:ignore="RtlSymmetry" />
            </LinearLayout>

        </LinearLayout>


    </LinearLayout>
</ScrollView>